# ir_line_follower_ws

install/: local_setup.sh  setup.sh
install/ir_line_follower/lib/ir_line_follower/: ir_controller_node  ir_sensor_node
install/ir_line_follower/share/ir_line_follower/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ir_line_follower/share/ir_line_follower/config/: bridge.yaml
install/ir_line_follower/share/ir_line_follower/launch/: ir_line_follower.launch.py
install/ir_line_follower/share/ir_line_follower/models/ir_robot/: model.config  model.sdf
install/ir_line_follower/share/ir_line_follower/worlds/: ir_worlds.sdf
log/: latest_build
src/ir_line_follower/: setup.cfg  setup.py
src/ir_line_follower/config/: bridge.yaml
src/ir_line_follower/ir_line_follower/: ir_controller_node.py  ir_sensor_node.py
src/ir_line_follower/launch/: ir_line_follower.launch.py
src/ir_line_follower/models/ir_robot/: model.config  model.sdf
src/ir_line_follower/resource/: package.xml
src/launch/: ir line_follower.launch.py
src/worlds/: ir_worlds.sdf
